# agentic-sdlc

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  SKILLS.md  agents.md  architecture.md  main.py  pyproject.toml  pytest.ini  requirements.txt  skills.md  template.py
docs/: architecture.md
docs/superpowers/plans/: 2026-04-24-dashboard-readability.md  2026-04-24-readme-refresh.md
docs/superpowers/specs/: 2026-04-24-dashboard-readability-design.md  2026-04-24-readme-refresh-design.md
src/a2a/: __init__.py  bus.py  cards.py  messages.py
src/agents/: architect_agent.py  base_agent.py  code_review_agent.py  developer_agent.py  devops_agent.py  doc_agent.py  qa_agent.py  requirements_agent.py
src/api/: __init__.py  app.py  deps.py  models.py  routes.py
src/core/: config.py
src/dashboard/: sidebar_components.py  streamlit_app.py
src/exceptions/: custom_exceptions.py
src/knowledge/: __init__.py  agentic_rag.py  ingest.py  retriever.py  store.py  tavily_client.py
src/logger/: custom_logger.py
src/memory/: extractor.py  models.py  recall.py  store.py
src/models/: schemas.py
src/pipelines/: context.py  graph.py  rewind.py  state.py
src/prompts/: architect_prompt.py  code_review_prompt.py  developer_prompt.py  devops_prompt.py  doc_prompt.py  requirement_prompt.py
src/sdlc_agents/: config.py
src/sdlc_agents/state/: enums.py
src/sdlc_agents/state/schemas/: a2a.py  base.py  code.py  common.py  deploy.py  design.py  feedback.py  qa.py  requirements.py  retrieval.py
src/tests/: test_developer_agent.py  test_graph_routing.py  test_mcp_client.py  test_smoke.py  test_test_runner.py
src/tools/: llm_factory.py  mcp_client.py  test_env.py  test_runner.py
workspace/attendance-management-system/: Dockerfile
workspace/attendance-management-system/.github/workflows/: ci.yml
workspace/attendance-management-system/app/: models.py  routes.py  schemas.py  services.py
workspace/attendance-management-system/docs/: architecture.md  developer.md  devops.md  qa.md  requirements.md
workspace/attendance-management-system/tests/: test_routes.py  test_services.py
workspace/fastapi-todo-api/: Dockerfile  requirements.txt
workspace/fastapi-todo-api/.github/workflows/: ci.yml
workspace/fastapi-todo-api/app/: database.py  exceptions.py  main.py  models.py  routes.py  schemas.py  storage.py
workspace/fastapi-todo-api/docs/: architecture.md  developer.md  devops.md  qa.md  requirements.md
workspace/fastapi-todo-api/tests/: test_main.py  test_routes.py
workspace/fastapi-todo-app/: Dockerfile
workspace/fastapi-todo-app/.github/workflows/: ci.yml
workspace/fastapi-todo-app/app/: crud.py  database.py  main.py  models.py  routes.py  schemas.py
workspace/fastapi-todo-app/docs/: architecture.md  developer.md  devops.md  qa.md  requirements.md
workspace/fastapi-todo-app/tests/: test_routes.py
workspace/fatapi-todo-app/: Dockerfile
workspace/fatapi-todo-app/.github/workflows/: ci.yml
workspace/fatapi-todo-app/app/: database.py  models.py  routes.py  schemas.py
workspace/fatapi-todo-app/docs/: architecture.md  developer.md  devops.md  qa.md  requirements.md
workspace/fatapi-todo-app/tests/: test_routes.py  test_smoke.py
workspace/todo-api/: Dockerfile  requirements.txt
workspace/todo-api/.github/workflows/: ci.yml
workspace/todo-api/app/: exceptions.py  main.py  models.py  routes.py  services.py  storage.py
workspace/todo-api/docs/: architecture.md  developer.md  devops.md  qa.md  requirements.md
workspace/todo-api/tests/: test_routes.py
