[project]
name = "agentic-sdlc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "click>=8.3.2",
    "cohere>=6.1.0",
    "datasets>=4.8.4",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-huggingface>=1.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.14",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.8",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.7.32",
    "markdownify>=1.2.2",
    "mcp[cli]>=1.27.0",
    "mypy>=1.20.1",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
    "qdrant-client[fastembed]>=1.17.1",
    "ragas>=0.4.3",
    "redis[hiredis]>=7.4.0",
    "rich>=14.3.4",
    "ruff>=0.15.11",
    "sse-starlette>=3.3.4",
    "streamlit>=1.56.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "tree-sitter>=0.25.2",
    "tree-sitter-languages>=1.10.2",
    "typer>=0.24.1",
    "types-pyyaml>=6.0.12.20260408",
    "uvicorn[standard]>=0.44.0",
    "voyageai>=0.3.7",
]


[project.scripts]
sdlc = "sdlc_agents.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdlc_agents"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle + pyflakes
    "I",            # isort
    "B",            # bugbear
    "N",            # naming
    "UP",           # pyupgrade
    "S",            # bandit (security)
    "A",            # builtins shadowing
    "C4",           # comprehensions
    "PT",           # pytest style
    "RUF",
]
ignore = ["S101"]  # allow assert (we use them in tests)

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ARG"]

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.12.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tree_sitter_languages.*", "sse_starlette.*"]
ignore_missing_imports = true

# ---------- Pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=src/sdlc_agents --cov-report=term-missing"
markers = [
    "integration: requires live infrastructure (docker compose up)",
    "e2e: end-to-end tests (slow)",
]
